<resources>
    <string name="app_name">freeFin2</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="freefinn">FreeFinn</string>
    <string name="loginn">Login</string>
    <string name="create_account">Create Account</string>
    <string name="passwordd">Password</string>
    <string name="usernamee">Username</string>
    <string name="t">Create_Account</string>
    <string name="sign_up">Sign Up!</string>
    <string name="preference_file_key">FreefinnSharedPreferenceKey</string>
    <string name="preference_usedId_key">username</string>
    <string name="account_balance">Account Balance</string>
    <string name="_0_00">$0.00</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="no_transactions_yet">No transactions yet</string>
    <string name="update_balance">Update Balance</string>
    <string name="view_goals">View Goals</string>
    <string name="set_goal">Set Goal</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="logged_in">LOGGED_IN</string>
    <string name="admin_area">Admin Area</string>
    <string name="admin" />
    <string name="active" />
    <string name="save" />
    <string name="enter_due_date" />
    <string name="enter_amount" />
    <string name="current_amount">Current Amount</string>
    <string name="savee">Save</string>
    <string name="target_amount">Target Amount</string>
    <string name="title">Title</string>
    <string name="set_goall">Set Goal</string>
    <string name="goal_titlee">Goal Title</string>
    <string name="goal_amountt">Goal Amount</string>
    <string name="goal_deadlinee">Goal Deadline</string>
    <string name="saveee">Save</string>
    <string name="cancel">Cancel</string>
    <string name="admin_settings">Admin Settings</string>
    <string name="delete_user">Delete User</string>
    <string name="logoutt">Logout</string>
    <string name="create_accountt">Create Account</string>
    <string name="balance_hint">balane hint</string>
    <string name="saveeee">save</string>
    <string-array name="theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System Default</item>
    </string-array>
</resources>