<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NotificationsActivity">

    <EditText
        android:id="@+id/titleInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/targetAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/target_amount"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/currentAmountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savee"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
